--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
           <li><a href="https://twitter.com/RaoInfotech" class="icons-sm tw-ic"><i class="fab fa-twitter"> </i></a></li>
         </ul>
       </li>
-      <li>
+      <!-- <li>
         <ul class="collapsible collapsible-accordion">
           <li><a class="collapsible-header waves-effect arrow-r"><span routerLink="/view-projects"><i class="fas fa-tasks"></i>  Projects</span>
             <i class="fa fa-angle-down rotate-icon"></i>
@@ -39,7 +39,7 @@
           <li><a routerLink="/add-employee" style="width: 100%;" class="collapsible-header waves-effect arrow-r"><i class="fas fa-flag-checkered"></i>   Add Employee</a></li>
           <li><a routerLink="/noticeboard" style="width: 100%;" class="collapsible-header waves-effect arrow-r"><i class="fas fa-chalkboard-teacher"></i>   Notice Board</a></li>
         </ul>
-      </li>
+      </li> -->
     </ul>
   </div>
   <nav class="navbar fixed-top navbar-toggleable-md navbar-dark scrolling-navbar double-nav">
@@ -61,15 +61,16 @@
       <a href="" class="star_link" title="Search(\)" data-toggle="tooltip" data-placement="right"><i class="fa fa-search" aria-hidden="true" ></i></a>
     </div> 
     <div class="second_icon dropdown">
-      <a href="" class="star_link" title="Create(c)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="plus_details"><i class="fa fa-plus" aria-hidden="true" ></i></a>
+      <a href="" class="star_link" title="Tracks" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="plus_details"><img src="assets/icons/tracks.png"></a>
       <div class="dropdown-menu">
-        <a class="dropdown-item"  [routerLink]="['/create-project']">Project</a>
-        <a class="dropdown-item" (click)="addItem('Task')">Task</a>
-        <a class="dropdown-item" (click)="addItem('Bug')">Bug</a>
-        <a class="dropdown-item" (click)="addItem('Issue')">Issue</a>
-        <a class="dropdown-item" [routerLink]="['/edit-project']">Add Team</a>
+        <a class="dropdown-item" data-toggle="modal" data-target="#addTrack">Add Track</a>
+        <a class="dropdown-item" data-toggle="modal" data-target="#editTrack">Edit Teack</a>
+        <a class="dropdown-item">Delete Track</a>
       </div>
-    </div>
+    </div> 
+    <!-- <div class="second_icon dropdown">
+      <a href="" class="star_link" title="Create(c)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="plus_details"><i class="fa fa-plus" aria-hidden="true" ></i></a>
+    </div> -->
   </div>
 
   <div class="bottom_icon">
@@ -99,69 +100,76 @@
 
 
 
-<!-- <div class="modal fade" id="editModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="addTrack" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title w-100" id="myModalLabel">{{modalTitle}}</h4>
+        <h4 class="modal-title w-100" id="myModalLabel">Add Track</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body" *ngIf="task">
-        <div class="row">
-          <form style="width: 100%;" [formGroup]="editTaskForm">
-            <div class="form-group col-12">
-              <label for="title">Title</label>
-              <input type="text" id="title" formControlName="title" [(ngModel)]="task.title" class="form-control">
-            </div>
-            <div class="form-group col-12">
-              <label for="desc">Discription</label>
-              <textarea id="desc" formControlName="desc" [(ngModel)]="task.desc" class="form-control md-textarea"></textarea>
-            </div>
-            <div class="row no-margin no padding" >
-              <div class="form-group col-12 col-lg-6">
-                <label for="assignTo">Assign To</label>
-                <select class="browser-default custom-select custom-select-lg mb-3" id="assignTo" formControlName="assignTo" [(ngModel)]="task.assignTo._id">
-                  <option *ngFor="let developer of developers" value="{{developer._id}}">{{developer.name}}</option>
-                </select>
-              </div>
-              <div class="form-group col-12 col-lg-6">
-                <label for="priority">Priority</label>
-                <select class="browser-default custom-select custom-select-lg mb-3" id="priority" formControlName="priority" [(ngModel)]="task.priority">
-                  <option value="low">Low</option>
-                  <option value="medium">Medium</option>
-                  <option value="high">High</option>
-                  <option value="highest">Highest</option>
-
-                </select>
-              </div>
-            </div>
-            <div class="row no-margin no padding">
-              <div class="form-group col-12 col-lg-6">
-                <label for="startDate">Start Date</label>
-                <input placeholder="Selected date" type="text" id="startDate" formControlName="startDate" [(ngModel)]="task.startDate" class="form-control datepicker">
-              </div>
-              <div class="form-group col-12 col-lg-6">
-
-                <label for="dueDate">Due Days</label>
-                <input placeholder="Selected days" type="number" id="dueDate" formControlName="dueDate" [(ngModel)]="task.dueDate" class="form-control">
-
-              </div>
-            </div>
-            <div class="form-group col-12">
-              <label for="status">Status</label>
-              <select class="browser-default custom-select custom-select-lg mb-3" id="status" formControlName="status" [(ngModel)]="task.status">
-                <option *ngFor="let trak of tracks" value="{{trak.id}}">{{trak.title}}</option>
-              </select>
-            </div>
-          </form>
+      <div class="modal-body">
+        <div class="md-form input-group no-margin">
+          <input type="text" class="form-control" placeholder="Track Title" [formControl]="titleCtrl">
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default btn-lg" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-default btn-lg" (click)="(modalTitle == 'Edit Item')?updateTask(task):saveTheData(editTaskForm.value)">Save changes</button>
+        <button type="button" class="btn btn-default btn-lg" [disabled]="!titleCtrl.valid" (click)="addTrack(titleCtrl.value)">Save changes</button>
       </div>
     </div>
   </div>
-</div> -->
+</div>
+
+<div class="modal fade" id="editTrack" tabindex="-1" role="dialog" aria-labelledby="editTrackLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title w-100" id="editTrackLabel">Add Track</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" *ngIf="tracks">
+        <div class="table">
+          <table class="table table-responsive">
+            <thead>
+              <th>#</th>
+              <th>Track</th>
+              <th>Action</th>
+            </thead>
+            <tbody class="board" cdkDropList [cdkDropListData]="tracks" (cdkDropListDropped)="onTrackDrop($event)" cdkDropListOrientation="vertical">
+              <tr  class="card-list mat-elevation-z1" *ngFor="let track of tracks; let i = index;" ng-repeat="-createdAt" (cdkDropListDropped)="onTalkDrop($event)" cdkDrag>
+                <td>{{i+1}}</td>
+                <td class="track_title"><input id="titleTrack{{i+1}}" type="text" class="form-control" placeholder="Track Title" [(ngModel)]="track.title" readonly></td>
+                <td>
+                  <a class="btn btn-link" [hidden]="!checkIfReadonly(i+1)" (click)="editTrackTitle(i+1)"><i class="fas fa-pen-alt text-Blue"></i></a>
+                  <a class="btn btn-link" [hidden]="checkIfReadonly(i+1)" (click)="saveTrackTitle(i+1, track)"><i class="fas fa-save text-Green"></i></a>
+                  <a class="btn btn-link" (click)="deleteTrack(track._id)"><i class="fas fa-trash text-Red"></i></a>
+                </td>
+              </tr>
+              <!-- <div class="board" cdkDropList [cdkDropListData]="tracks" (cdkDropListDropped)="onTrackDrop($event)" cdkDropListOrientation="horizontal">
+                <div class="card-list mat-elevation-z1" *ngFor="let track of tracks" ng-repeat="-createdAt" (cdkDropListDropped)="onTalkDrop($event)" cdkDrag [ngStyle]='{"width": "calc(100%/"+(tracks.length)+" - 12px)"}'>
+                  <div class="card">
+                    <div class="card-header" style="padding: 5px 10px;">
+                      <span class="track_title">{{track.title}}</span>
+                      <span class="card_count_lbl">{{track.tasks.length}}</span>
+                    </div>    
+                  </div>
+                </div>
+              </div> -->
+            </tbody>
+          </table>
+        </div>
+        <!-- <div class="md-form input-group no-margin">
+          <input type="text" class="form-control" placeholder="Track Title" [formControl]="titleCtrl">
+        </div> -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default btn-lg" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default btn-lg" [disabled]="!titleCtrl.valid" (click)="addTrack(titleCtrl.value)">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
