--- a/src/app/client-tracks/client-tracks.component.css
+++ b/src/app/client-tracks/client-tracks.component.css
@@ -26,10 +26,10 @@
 
 .card-list {
   height:auto;
-  width: auto;/*calc(25% - 12px);*/
+  /*width: calc((100% / 4) - 12px);*/
   overflow: auto;
   box-sizing: border-box;
-  margin-right: 14px;
+  margin: 0 6px;
   flex-shrink: 0;
 
   /*background: rgba(0, 0, 0, 0.03);*/
@@ -43,9 +43,9 @@
   background-color: white;
 }
 
-.card-list:last-child{
+/*.card-list:last-child{
   margin-right: 0px;
-}
+}*/
 .card-list h2 {
   margin-bottom: 5px;
 }
@@ -126,7 +126,7 @@ table {
     background-color: #f4f5f7 !important;
     border-radius: 4px 4px 0 0;
     padding: 1px 3px 0;
-    height: 40px;
+    /*height: 40px;*/
   }
   .mat-card{
     padding: 0;
