--- a/src/app/client-tracks/client-tracks.component.html
+++ b/src/app/client-tracks/client-tracks.component.html
@@ -1,18 +1,18 @@
-<div class="row justify-content-end">
+<div class="text-right">
 	<button class="btn btn-default" type="button" data-toggle="modal" data-target="#exampleModalPreview" (click)="getEmptyNewClient(); modalTitle = 'Add Client'">Add Item</button>
 </div>
 
 
 <div class="all_card">
 	<div class="board" cdkDropList [cdkDropListData]="tracks" (cdkDropListDropped)="onTrackDrop($event)" cdkDropListOrientation="horizontal">
-		<div class="card-list mat-elevation-z1" *ngFor="let track of tracks" ng-repeat="-createdAt">
+		<div class="card-list mat-elevation-z1" *ngFor="let track of tracks" ng-repeat="-createdAt" [ngStyle]='{"width": "calc(100%/"+(tracks.length)+" - 12px)"}' cdkDrag>
 			<div class="card">
 				<div class="card-header" style="padding: 5px 10px;">
 					<span class="track_title">{{track.title}}</span>
 					<span class="card_count_lbl">{{track.tasks.length}}</span>
 				</div>		
 			</div>
-			<div class="card-list-content" cdkDropList [id]="track.id" [cdkDropListData]="track.tasks" [cdkDropListConnectedTo]="trackIds" (cdkDropListDropped)="onTalkDrop($event)" style="margin: 3px; padding: 3px;">
+			<div class="card-list-content" cdkDropList [id]="track.trackId" [cdkDropListData]="track.tasks" [cdkDropListConnectedTo]="trackIds" (cdkDropListDropped)="onTalkDrop($event)" style="margin: 3px; padding: 3px;">
 				<mat-card *ngFor="let task of track.tasks "cdkDrag>
 					<mat-card-content>
 						<div class="card" [ngClass]="getPriorityClass(task.priority).class" (click)="openModel(task)" data-toggle="tooltip" data-placement="bottom" [title]="getPriorityClass(task.priority).title">
@@ -46,6 +46,18 @@
 				</mat-card>
 			</div>
 		</div>
+		<!-- <div class="mat-elevation-z1">
+			<div class="card">
+				<div class="card-header" style="padding: 5px 10px;">
+					<div class="md-form input-group no-margin">
+						<input type="text" class="form-control" placeholder="Track Title" [formControl]="titleCtrl">
+						<div class="input-group-append">
+							<button class="btn btn-md btn-secondary m-0 px-3" type="button" id="MaterialButton-addon2" [disabled]="!titleCtrl.valid" (click)="addTrack(titleCtrl.value)"><i class="fas fa-plus"></i></button>
+						</div>
+					</div>
+				</div>		
+			</div>
+		</div> -->
 	</div>
 </div>
 
@@ -256,7 +268,7 @@
 								</mat-autocomplete>
 							</mat-form-field>
 						</div>
-						<div class="form-group col-12">
+						<div class="form-group col-12" *ngIf="newClinet.status">
 							<label for="status">Status</label>
 							<select class="browser-default custom-select custom-select-lg mb-3" id="status" formControlName="status" [(ngModel)]="newClinet.status">
 								<option *ngFor="let trak of tracks" value="{{trak.id}}">{{trak.title}}</option>
@@ -267,7 +279,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default btn-lg" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-default btn-lg" (click)="(modalTitle == 'Edit Client')?updateTask(newClinet):saveTheClient(addClientForm.value)">Save changes</button>
+				<button type="button" class="btn btn-default btn-lg" (click)="saveTheClient(addClientForm.value)">Save changes</button><!-- (modalTitle == 'Edit Client')?updateTask(newClinet): -->
 			</div>
 		</div>
 	</div>
