--- a/src/app/client-tracks/client-tracks.component.css
+++ b/src/app/client-tracks/client-tracks.component.css
@@ -2,6 +2,18 @@
     min-height: 100px;
 }
 
+.team-members img{
+  position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+}
+
 .example-form {
   min-width: 150px;
   max-width: 500px;
@@ -70,15 +82,34 @@
 }
 
 .team-members li{
-  height: 25px;
-  width: 25px;
+  height: 50px;
+  width: 50px;
   border-radius: 50%;
   border: 2px solid white;
   display: inline-block;
   text-align: center;
-  padding: 3px 2px;
+  padding: 7px 2px;
   font-weight: 700;
-  font-size: 10px;
+  font-size: 24px;
+  background-color: #372e5f;
+  float: left;
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(171,171,171,0.8);
+  -moz-box-shadow: 0px 0px 20px 0px rgba(171,171,171,0.8);
+  box-shadow: 0px 0px 20px 0px rgba(171,171,171,0.8);
+  position: relative;
+  cursor: pointer;
+}
+
+.comment_section .team-members li{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 2px solid white;
+  display: inline-block;
+  text-align: center;
+  padding: 18px 2px;
+  font-weight: 700;
+  font-size: 25px;
   background-color: #372e5f;
   float: left;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(171,171,171,0.8);
