--- a/src/app/client-tracks/client-tracks.component.html
+++ b/src/app/client-tracks/client-tracks.component.html
@@ -1,5 +1,11 @@
 <div class="text-right">
-	<button class="btn btn-default" type="button" data-toggle="modal" data-target="#exampleModalPreview" (click)="getEmptyNewClient(); modalTitle = 'Add Client'">Add Item</button>
+	<button class="btn btn-default" type="button"(click)="openAddModel()">Add Item</button>
+</div>
+
+<div class="form-group col-12">
+	<mat-form-field class="example-full-width">
+		<input type="text" aria-label="Number" [(ngModel)]="searchText" matInput placeholder="Search here...." (keyup)="onKey(searchText)" autocomplete="off">
+	</mat-form-field>
 </div>
 
 
@@ -20,10 +26,17 @@
 								<table cellspacing="2">
 									<tr>
 										<td>
-											<ul class="team-members">	
+											<ul class="team-members" *ngIf="!task.logo">	
 												<li *ngIf="task.coordinator" [title]="getTitle(task.coordinator.name)">
 													<a href="javascript:void(0);">
 														{{getInitialsOfName(task.coordinator.name)}}
+													</a>
+												</li>
+											</ul>
+											<ul class="team-members" *ngIf="task.logo">	
+												<li>
+													<a href="javascript:void(0);">
+														<img src="{{base}}{{task.logo}}" class="img-fluid img-circle">
 													</a>
 												</li>
 											</ul>
@@ -70,15 +83,17 @@
 					<table style="width: 100%;">
 						<tr>
 							<td style="width: 20px;">
-								<ul class="team-members">	
+								<ul class="team-members" *ngIf="!newClinet.logo">	
 									<li *ngIf="newClinet.coordinator" [title]="getTitle(newClinet.coordinator.name)">
 										<a href="javascript:void(0);">
 											{{getInitialsOfName(newClinet.coordinator.name)}}
 										</a>
 									</li>
-									<li *ngIf="!newClinet.coordinator" class="add-member">
-										<a href="javascript:void(0);" title="Add Member">
-											<i class="fa fa-user-plus"></i>
+								</ul>
+								<ul class="team-members" *ngIf="newClinet.logo">	
+									<li>
+										<a href="javascript:void(0);">
+											<img src="{{base}}{{newClinet.logo}}" class="img-fluid img-circle">
 										</a>
 									</li>
 								</ul>
@@ -127,6 +142,20 @@
 							<div class="col-12 col-md-4">
 								<p>start time end time</p>
 							</div>
+						</div>
+						<div class="row" *ngIf="newClinet.timelog && newClinet.timelog.length>0">
+							<table class="table table-striped">
+									<tr>
+										<th>#</th>
+										<th>Action</th>
+										<th>Time</th>
+									</tr>
+									<tr *ngFor="let log of newClinet.timelog; let i=index; ">
+										<td>{{i+1}}</td>
+										<td>{{log.operation}}</td>
+										<td>{{log.dateTime | date:'short'}}</td>
+									</tr>
+							</table>
 						</div>
 						<div class="row justify-content-between">
 							<div>
@@ -196,7 +225,7 @@
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
-			<div class="modal-body" *ngIf="newClinet">
+			<div class="modal-body">
 				<div class="row">
 					<form style="width: 100%;" [formGroup]="addClientForm">
 						<div class="form-group col-12">
@@ -242,31 +271,31 @@
 							</div>
 						</div>
 						<div class="row no-margin no padding" >
-							<!-- <div class="form-group col-12">
+							<div class="form-group col-12">
 								<label for="communication_medium">Communication Type</label>
 								<input id="communication_medium" type="text" formControlName="communication_medium" [(ngModel)]="newClinet.communication_medium" class="form-control">
-							</div> -->
+							</div>
+								<!-- <mat-form-field class="example-full-width">
+									<input type="text" aria-label="Number" matInput formControlName="communication_medium" [matAutocomplete]="auto" placeholder="Select Communication Medium">
+									<mat-autocomplete #auto="matAutocomplete">
+										<mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+											{{option}}
+										</mat-option>
+									</mat-autocomplete>
+								</mat-form-field> -->
 							<!-- <mat-form-field class="example-full-width">
-								<input type="text" aria-label="Number" matInput formControlName="communication_medium" [matAutocomplete]="auto">
-								<mat-autocomplete #auto="matAutocomplete">
-									<mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-										{{option}}
-									</mat-option>
-								</mat-autocomplete>
-							</mat-form-field> -->
-							<mat-form-field class="example-full-width">
 								<input type="text" aria-label="Number" matInput formControlName="communication_medium" [(ngModel)]="newClinet.communication_medium" [matAutocomplete]="auto">
 								<mat-autocomplete #auto="matAutocomplete">
 									<mat-option *ngFor="let option of options" [value]="option.id">
 										{{ option.name }}
 									</mat-option>
 								</mat-autocomplete>
-							</mat-form-field>
+							</mat-form-field> -->
 						</div>
-						<div class="form-group col-12" *ngIf="newClinet.status">
+						<div class="form-group col-12">
 							<label for="status">Status</label>
 							<select class="browser-default custom-select custom-select-lg mb-3" id="status" formControlName="status" [(ngModel)]="newClinet.status">
-								<option *ngFor="let trak of tracks" value="{{trak.id}}">{{trak.title}}</option>
+								<option *ngFor="let trak of tracks" value="{{trak.trackId}}">{{trak.title}}</option>
 							</select>
 						</div>
 					</form>
